// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dark Nav List 1`] = `
<Component
  className="test=nav-class"
  theme="dark"
>
  <ComponentWithOuia
    component={[Function]}
    componentProps={
      Object {
        "children": <NavList
          ariaLeftScroll="Scroll left"
          ariaRightScroll="Scroll right"
          className="test-nav-list-class"
          variant="default"
        >
          <Unknown
            className="test-nav-item-class"
            to="#link1"
          >
            Link 1
          </Unknown>
          <Unknown
            className="test-nav-item-class"
            to="#link2"
          >
            Link 2
          </Unknown>
          <Unknown
            className="test-nav-item-class"
            to="#link3"
          >
            Link 3
          </Unknown>
          <Unknown
            className="test-nav-item-class"
            to="#link4"
          >
            Link 4
          </Unknown>
        </NavList>,
        "className": "test=nav-class",
        "theme": "dark",
      }
    }
    consumerContext={null}
  >
    <Nav
      aria-label=""
      className="test=nav-class"
      onSelect={[Function]}
      onToggle={[Function]}
      ouiaContext={
        Object {
          "isOuia": false,
          "ouiaId": null,
        }
      }
      theme="dark"
    >
      <nav
        aria-label="Global"
        className="pf-c-nav pf-m-dark test=nav-class"
      >
        <NavList
          ariaLeftScroll="Scroll left"
          ariaRightScroll="Scroll right"
          className="test-nav-list-class"
          variant="default"
        >
          <ul
            className="pf-c-nav__list test-nav-list-class"
          >
            <Component
              className="test-nav-item-class"
              key="#link1"
              to="#link1"
            >
              <li
                className="pf-c-nav__item test-nav-item-class"
              >
                <a
                  aria-current={null}
                  className="pf-c-nav__link test-nav-item-class"
                  href="#link1"
                  onClick={[Function]}
                >
                  Link 1
                </a>
              </li>
            </Component>
            <Component
              className="test-nav-item-class"
              key="#link2"
              to="#link2"
            >
              <li
                className="pf-c-nav__item test-nav-item-class"
              >
                <a
                  aria-current={null}
                  className="pf-c-nav__link test-nav-item-class"
                  href="#link2"
                  onClick={[Function]}
                >
                  Link 2
                </a>
              </li>
            </Component>
            <Component
              className="test-nav-item-class"
              key="#link3"
              to="#link3"
            >
              <li
                className="pf-c-nav__item test-nav-item-class"
              >
                <a
                  aria-current={null}
                  className="pf-c-nav__link test-nav-item-class"
                  href="#link3"
                  onClick={[Function]}
                >
                  Link 3
                </a>
              </li>
            </Component>
            <Component
              className="test-nav-item-class"
              key="#link4"
              to="#link4"
            >
              <li
                className="pf-c-nav__item test-nav-item-class"
              >
                <a
                  aria-current={null}
                  className="pf-c-nav__link test-nav-item-class"
                  href="#link4"
                  onClick={[Function]}
                >
                  Link 4
                </a>
              </li>
            </Component>
          </ul>
        </NavList>
      </nav>
    </Nav>
  </ComponentWithOuia>
</Component>
`;

exports[`Default Nav List - Trigger item active update 1`] = `
<Component>
  <ComponentWithOuia
    component={[Function]}
    componentProps={
      Object {
        "children": <NavList
          ariaLeftScroll="Scroll left"
          ariaRightScroll="Scroll right"
          className=""
          variant="default"
        >
          <Unknown
            to="#link1"
          >
            Link 1
          </Unknown>
          <Unknown
            to="#link2"
          >
            Link 2
          </Unknown>
          <Unknown
            to="#link3"
          >
            Link 3
          </Unknown>
          <Unknown
            to="#link4"
          >
            Link 4
          </Unknown>
        </NavList>,
      }
    }
    consumerContext={null}
  >
    <Nav
      aria-label=""
      className=""
      onSelect={[Function]}
      onToggle={[Function]}
      ouiaContext={
        Object {
          "isOuia": false,
          "ouiaId": null,
        }
      }
      theme="light"
    >
      <nav
        aria-label="Global"
        className="pf-c-nav"
      >
        <NavList
          ariaLeftScroll="Scroll left"
          ariaRightScroll="Scroll right"
          className=""
          variant="default"
        >
          <ul
            className="pf-c-nav__list"
          >
            <Component
              key="#link1"
              to="#link1"
            >
              <li
                className="pf-c-nav__item"
              >
                <a
                  aria-current={null}
                  className="pf-c-nav__link"
                  href="#link1"
                  onClick={[Function]}
                >
                  Link 1
                </a>
              </li>
            </Component>
            <Component
              key="#link2"
              to="#link2"
            >
              <li
                className="pf-c-nav__item"
              >
                <a
                  aria-current={null}
                  className="pf-c-nav__link"
                  href="#link2"
                  onClick={[Function]}
                >
                  Link 2
                </a>
              </li>
            </Component>
            <Component
              key="#link3"
              to="#link3"
            >
              <li
                className="pf-c-nav__item"
              >
                <a
                  aria-current={null}
                  className="pf-c-nav__link"
                  href="#link3"
                  onClick={[Function]}
                >
                  Link 3
                </a>
              </li>
            </Component>
            <Component
              key="#link4"
              to="#link4"
            >
              <li
                className="pf-c-nav__item"
              >
                <a
                  aria-current={null}
                  className="pf-c-nav__link"
                  href="#link4"
                  onClick={[Function]}
                >
                  Link 4
                </a>
              </li>
            </Component>
          </ul>
        </NavList>
      </nav>
    </Nav>
  </ComponentWithOuia>
</Component>
`;

exports[`Default Nav List 1`] = `
<Component
  className="test=nav-class"
>
  <ComponentWithOuia
    component={[Function]}
    componentProps={
      Object {
        "children": <NavList
          ariaLeftScroll="Scroll left"
          ariaRightScroll="Scroll right"
          className="test-nav-list-class"
          variant="default"
        >
          <Unknown
            className="test-nav-item-class"
            to="#link1"
          >
            Link 1
          </Unknown>
          <Unknown
            className="test-nav-item-class"
            to="#link2"
          >
            Link 2
          </Unknown>
          <Unknown
            className="test-nav-item-class"
            to="#link3"
          >
            Link 3
          </Unknown>
          <Unknown
            className="test-nav-item-class"
            to="#link4"
          >
            Link 4
          </Unknown>
        </NavList>,
        "className": "test=nav-class",
      }
    }
    consumerContext={null}
  >
    <Nav
      aria-label=""
      className="test=nav-class"
      onSelect={[Function]}
      onToggle={[Function]}
      ouiaContext={
        Object {
          "isOuia": false,
          "ouiaId": null,
        }
      }
      theme="light"
    >
      <nav
        aria-label="Global"
        className="pf-c-nav test=nav-class"
      >
        <NavList
          ariaLeftScroll="Scroll left"
          ariaRightScroll="Scroll right"
          className="test-nav-list-class"
          variant="default"
        >
          <ul
            className="pf-c-nav__list test-nav-list-class"
          >
            <Component
              className="test-nav-item-class"
              key="#link1"
              to="#link1"
            >
              <li
                className="pf-c-nav__item test-nav-item-class"
              >
                <a
                  aria-current={null}
                  className="pf-c-nav__link test-nav-item-class"
                  href="#link1"
                  onClick={[Function]}
                >
                  Link 1
                </a>
              </li>
            </Component>
            <Component
              className="test-nav-item-class"
              key="#link2"
              to="#link2"
            >
              <li
                className="pf-c-nav__item test-nav-item-class"
              >
                <a
                  aria-current={null}
                  className="pf-c-nav__link test-nav-item-class"
                  href="#link2"
                  onClick={[Function]}
                >
                  Link 2
                </a>
              </li>
            </Component>
            <Component
              className="test-nav-item-class"
              key="#link3"
              to="#link3"
            >
              <li
                className="pf-c-nav__item test-nav-item-class"
              >
                <a
                  aria-current={null}
                  className="pf-c-nav__link test-nav-item-class"
                  href="#link3"
                  onClick={[Function]}
                >
                  Link 3
                </a>
              </li>
            </Component>
            <Component
              className="test-nav-item-class"
              key="#link4"
              to="#link4"
            >
              <li
                className="pf-c-nav__item test-nav-item-class"
              >
                <a
                  aria-current={null}
                  className="pf-c-nav__link test-nav-item-class"
                  href="#link4"
                  onClick={[Function]}
                >
                  Link 4
                </a>
              </li>
            </Component>
          </ul>
        </NavList>
      </nav>
    </Nav>
  </ComponentWithOuia>
</Component>
`;

exports[`Expandable Nav List - Trigger toggle 1`] = `
<Component>
  <ComponentWithOuia
    component={[Function]}
    componentProps={
      Object {
        "children": <NavList
          ariaLeftScroll="Scroll left"
          ariaRightScroll="Scroll right"
          className=""
          variant="default"
        >
          <NavExpandable
            className="expandable-group"
            groupId={null}
            id="grp-1"
            isActive={false}
            isExpanded={true}
            srText=""
            title="Section 1"
          >
            <Unknown
              to="#link1"
            >
              Link 1
            </Unknown>
            <Unknown
              to="#link2"
            >
              Link 2
            </Unknown>
            <Unknown
              to="#link3"
            >
              Link 3
            </Unknown>
            <Unknown
              to="#link4"
            >
              Link 4
            </Unknown>
          </NavExpandable>
        </NavList>,
      }
    }
    consumerContext={null}
  >
    <Nav
      aria-label=""
      className=""
      onSelect={[Function]}
      onToggle={[Function]}
      ouiaContext={
        Object {
          "isOuia": false,
          "ouiaId": null,
        }
      }
      theme="light"
    >
      <nav
        aria-label="Global"
        className="pf-c-nav"
      >
        <NavList
          ariaLeftScroll="Scroll left"
          ariaRightScroll="Scroll right"
          className=""
          variant="default"
        >
          <ul
            className="pf-c-nav__list"
          >
            <NavExpandable
              className="expandable-group"
              groupId={null}
              id="grp-1"
              isActive={false}
              isExpanded={true}
              srText=""
              title="Section 1"
            >
              <li
                className="pf-c-nav__item pf-m-expanded expandable-group"
                onClick={[Function]}
              >
                <a
                  aria-expanded={true}
                  className="pf-c-nav__link"
                  data-component="pf-nav-expandable"
                  href="#"
                  id="grp-1"
                  onClick={[Function]}
                  onMouseDown={[Function]}
                >
                  Section 1
                  <span
                    className="pf-c-nav__toggle"
                  >
                    <AngleRightIcon
                      aria-hidden="true"
                      color="currentColor"
                      noVerticalAlign={false}
                      size="sm"
                      title={null}
                    >
                      <svg
                        aria-hidden="true"
                        aria-labelledby={null}
                        fill="currentColor"
                        height="1em"
                        role="img"
                        style={
                          Object {
                            "verticalAlign": "-0.125em",
                          }
                        }
                        viewBox="0 0 256 512"
                        width="1em"
                      >
                        <path
                          d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                          transform=""
                        />
                      </svg>
                    </AngleRightIcon>
                  </span>
                </a>
                <section
                  aria-labelledby="grp-1"
                  className="pf-c-nav__subnav"
                  hidden={null}
                >
                  <ul
                    className="pf-c-nav__simple-list"
                  >
                    <Component
                      key="#link1"
                      to="#link1"
                    >
                      <li
                        className="pf-c-nav__item"
                      >
                        <a
                          aria-current={null}
                          className="pf-c-nav__link"
                          href="#link1"
                          onClick={[Function]}
                        >
                          Link 1
                        </a>
                      </li>
                    </Component>
                    <Component
                      key="#link2"
                      to="#link2"
                    >
                      <li
                        className="pf-c-nav__item"
                      >
                        <a
                          aria-current={null}
                          className="pf-c-nav__link"
                          href="#link2"
                          onClick={[Function]}
                        >
                          Link 2
                        </a>
                      </li>
                    </Component>
                    <Component
                      key="#link3"
                      to="#link3"
                    >
                      <li
                        className="pf-c-nav__item"
                      >
                        <a
                          aria-current={null}
                          className="pf-c-nav__link"
                          href="#link3"
                          onClick={[Function]}
                        >
                          Link 3
                        </a>
                      </li>
                    </Component>
                    <Component
                      key="#link4"
                      to="#link4"
                    >
                      <li
                        className="pf-c-nav__item"
                      >
                        <a
                          aria-current={null}
                          className="pf-c-nav__link"
                          href="#link4"
                          onClick={[Function]}
                        >
                          Link 4
                        </a>
                      </li>
                    </Component>
                  </ul>
                </section>
              </li>
            </NavExpandable>
          </ul>
        </NavList>
      </nav>
    </Nav>
  </ComponentWithOuia>
</Component>
`;

exports[`Expandable Nav List 1`] = `
<Component>
  <ComponentWithOuia
    component={[Function]}
    componentProps={
      Object {
        "children": <NavList
          ariaLeftScroll="Scroll left"
          ariaRightScroll="Scroll right"
          className=""
          variant="default"
        >
          <NavExpandable
            className=""
            groupId={null}
            id="grp-1"
            isActive={false}
            isExpanded={false}
            srText=""
            title="Section 1"
          >
            <Unknown
              to="#link1"
            >
              Link 1
            </Unknown>
            <Unknown
              to="#link2"
            >
              Link 2
            </Unknown>
            <Unknown
              to="#link3"
            >
              Link 3
            </Unknown>
            <Unknown
              to="#link4"
            >
              Link 4
            </Unknown>
          </NavExpandable>
        </NavList>,
      }
    }
    consumerContext={null}
  >
    <Nav
      aria-label=""
      className=""
      onSelect={[Function]}
      onToggle={[Function]}
      ouiaContext={
        Object {
          "isOuia": false,
          "ouiaId": null,
        }
      }
      theme="light"
    >
      <nav
        aria-label="Global"
        className="pf-c-nav"
      >
        <NavList
          ariaLeftScroll="Scroll left"
          ariaRightScroll="Scroll right"
          className=""
          variant="default"
        >
          <ul
            className="pf-c-nav__list"
          >
            <NavExpandable
              className=""
              groupId={null}
              id="grp-1"
              isActive={false}
              isExpanded={false}
              srText=""
              title="Section 1"
            >
              <li
                className="pf-c-nav__item"
                onClick={[Function]}
              >
                <a
                  aria-expanded={false}
                  className="pf-c-nav__link"
                  data-component="pf-nav-expandable"
                  href="#"
                  id="grp-1"
                  onClick={[Function]}
                  onMouseDown={[Function]}
                >
                  Section 1
                  <span
                    className="pf-c-nav__toggle"
                  >
                    <AngleRightIcon
                      aria-hidden="true"
                      color="currentColor"
                      noVerticalAlign={false}
                      size="sm"
                      title={null}
                    >
                      <svg
                        aria-hidden="true"
                        aria-labelledby={null}
                        fill="currentColor"
                        height="1em"
                        role="img"
                        style={
                          Object {
                            "verticalAlign": "-0.125em",
                          }
                        }
                        viewBox="0 0 256 512"
                        width="1em"
                      >
                        <path
                          d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                          transform=""
                        />
                      </svg>
                    </AngleRightIcon>
                  </span>
                </a>
                <section
                  aria-labelledby="grp-1"
                  className="pf-c-nav__subnav"
                  hidden={true}
                >
                  <ul
                    className="pf-c-nav__simple-list"
                  >
                    <Component
                      key="#link1"
                      to="#link1"
                    >
                      <li
                        className="pf-c-nav__item"
                      >
                        <a
                          aria-current={null}
                          className="pf-c-nav__link"
                          href="#link1"
                          onClick={[Function]}
                        >
                          Link 1
                        </a>
                      </li>
                    </Component>
                    <Component
                      key="#link2"
                      to="#link2"
                    >
                      <li
                        className="pf-c-nav__item"
                      >
                        <a
                          aria-current={null}
                          className="pf-c-nav__link"
                          href="#link2"
                          onClick={[Function]}
                        >
                          Link 2
                        </a>
                      </li>
                    </Component>
                    <Component
                      key="#link3"
                      to="#link3"
                    >
                      <li
                        className="pf-c-nav__item"
                      >
                        <a
                          aria-current={null}
                          className="pf-c-nav__link"
                          href="#link3"
                          onClick={[Function]}
                        >
                          Link 3
                        </a>
                      </li>
                    </Component>
                    <Component
                      key="#link4"
                      to="#link4"
                    >
                      <li
                        className="pf-c-nav__item"
                      >
                        <a
                          aria-current={null}
                          className="pf-c-nav__link"
                          href="#link4"
                          onClick={[Function]}
                        >
                          Link 4
                        </a>
                      </li>
                    </Component>
                  </ul>
                </section>
              </li>
            </NavExpandable>
          </ul>
        </NavList>
      </nav>
    </Nav>
  </ComponentWithOuia>
</Component>
`;

exports[`Expandable Nav List with aria label 1`] = `
<Component
  aria-label="Test"
>
  <ComponentWithOuia
    component={[Function]}
    componentProps={
      Object {
        "aria-label": "Test",
        "children": <NavList
          ariaLeftScroll="Scroll left"
          ariaRightScroll="Scroll right"
          className=""
          variant="default"
        >
          <NavExpandable
            className=""
            groupId={null}
            id="grp-1"
            isActive={false}
            isExpanded={false}
            srText="Section 1 - Example sub-navigation"
            title="Section 1"
          >
            <Unknown
              to="#link1"
            >
              Link 1
            </Unknown>
            <Unknown
              to="#link2"
            >
              Link 2
            </Unknown>
            <Unknown
              to="#link3"
            >
              Link 3
            </Unknown>
            <Unknown
              to="#link4"
            >
              Link 4
            </Unknown>
          </NavExpandable>
        </NavList>,
      }
    }
    consumerContext={null}
  >
    <Nav
      aria-label="Test"
      className=""
      onSelect={[Function]}
      onToggle={[Function]}
      ouiaContext={
        Object {
          "isOuia": false,
          "ouiaId": null,
        }
      }
      theme="light"
    >
      <nav
        aria-label="Test"
        className="pf-c-nav"
      >
        <NavList
          ariaLeftScroll="Scroll left"
          ariaRightScroll="Scroll right"
          className=""
          variant="default"
        >
          <ul
            className="pf-c-nav__list"
          >
            <NavExpandable
              className=""
              groupId={null}
              id="grp-1"
              isActive={false}
              isExpanded={false}
              srText="Section 1 - Example sub-navigation"
              title="Section 1"
            >
              <li
                className="pf-c-nav__item"
                onClick={[Function]}
              >
                <a
                  aria-expanded={false}
                  className="pf-c-nav__link"
                  data-component="pf-nav-expandable"
                  href="#"
                  id={null}
                  onClick={[Function]}
                  onMouseDown={[Function]}
                >
                  Section 1
                  <span
                    className="pf-c-nav__toggle"
                  >
                    <AngleRightIcon
                      aria-hidden="true"
                      color="currentColor"
                      noVerticalAlign={false}
                      size="sm"
                      title={null}
                    >
                      <svg
                        aria-hidden="true"
                        aria-labelledby={null}
                        fill="currentColor"
                        height="1em"
                        role="img"
                        style={
                          Object {
                            "verticalAlign": "-0.125em",
                          }
                        }
                        viewBox="0 0 256 512"
                        width="1em"
                      >
                        <path
                          d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                          transform=""
                        />
                      </svg>
                    </AngleRightIcon>
                  </span>
                </a>
                <section
                  aria-labelledby="grp-1"
                  className="pf-c-nav__subnav"
                  hidden={true}
                >
                  <h2
                    className="pf-u-screen-reader"
                    id="grp-1"
                  >
                    Section 1 - Example sub-navigation
                  </h2>
                  <ul
                    className="pf-c-nav__simple-list"
                  >
                    <Component
                      key="#link1"
                      to="#link1"
                    >
                      <li
                        className="pf-c-nav__item"
                      >
                        <a
                          aria-current={null}
                          className="pf-c-nav__link"
                          href="#link1"
                          onClick={[Function]}
                        >
                          Link 1
                        </a>
                      </li>
                    </Component>
                    <Component
                      key="#link2"
                      to="#link2"
                    >
                      <li
                        className="pf-c-nav__item"
                      >
                        <a
                          aria-current={null}
                          className="pf-c-nav__link"
                          href="#link2"
                          onClick={[Function]}
                        >
                          Link 2
                        </a>
                      </li>
                    </Component>
                    <Component
                      key="#link3"
                      to="#link3"
                    >
                      <li
                        className="pf-c-nav__item"
                      >
                        <a
                          aria-current={null}
                          className="pf-c-nav__link"
                          href="#link3"
                          onClick={[Function]}
                        >
                          Link 3
                        </a>
                      </li>
                    </Component>
                    <Component
                      key="#link4"
                      to="#link4"
                    >
                      <li
                        className="pf-c-nav__item"
                      >
                        <a
                          aria-current={null}
                          className="pf-c-nav__link"
                          href="#link4"
                          onClick={[Function]}
                        >
                          Link 4
                        </a>
                      </li>
                    </Component>
                  </ul>
                </section>
              </li>
            </NavExpandable>
          </ul>
        </NavList>
      </nav>
    </Nav>
  </ComponentWithOuia>
</Component>
`;

exports[`Horizontal Nav List 1`] = `
<Component>
  <ComponentWithOuia
    component={[Function]}
    componentProps={
      Object {
        "children": <NavList
          ariaLeftScroll="Scroll left"
          ariaRightScroll="Scroll right"
          className=""
          variant="horizontal"
        >
          <Unknown
            to="#link1"
          >
            Link 1
          </Unknown>
          <Unknown
            to="#link2"
          >
            Link 2
          </Unknown>
          <Unknown
            to="#link3"
          >
            Link 3
          </Unknown>
          <Unknown
            to="#link4"
          >
            Link 4
          </Unknown>
        </NavList>,
      }
    }
    consumerContext={null}
  >
    <Nav
      aria-label=""
      className=""
      onSelect={[Function]}
      onToggle={[Function]}
      ouiaContext={
        Object {
          "isOuia": false,
          "ouiaId": null,
        }
      }
      theme="light"
    >
      <nav
        aria-label="Global"
        className="pf-c-nav"
      >
        <NavList
          ariaLeftScroll="Scroll left"
          ariaRightScroll="Scroll right"
          className=""
          variant="horizontal"
        >
          <button
            aria-label="Scroll left"
            className="pf-c-nav__scroll-button"
            onClick={[Function]}
          >
            <AngleLeftIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
              title={null}
            >
              <svg
                aria-hidden={true}
                aria-labelledby={null}
                fill="currentColor"
                height="1em"
                role="img"
                style={
                  Object {
                    "verticalAlign": "-0.125em",
                  }
                }
                viewBox="0 0 256 512"
                width="1em"
              >
                <path
                  d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
                  transform=""
                />
              </svg>
            </AngleLeftIcon>
          </button>
          <ul
            className="pf-c-nav__horizontal-list"
          >
            <Component
              key="#link1"
              to="#link1"
            >
              <li
                className="pf-c-nav__item"
              >
                <a
                  aria-current={null}
                  className="pf-c-nav__link"
                  href="#link1"
                  onClick={[Function]}
                >
                  Link 1
                </a>
              </li>
            </Component>
            <Component
              key="#link2"
              to="#link2"
            >
              <li
                className="pf-c-nav__item"
              >
                <a
                  aria-current={null}
                  className="pf-c-nav__link"
                  href="#link2"
                  onClick={[Function]}
                >
                  Link 2
                </a>
              </li>
            </Component>
            <Component
              key="#link3"
              to="#link3"
            >
              <li
                className="pf-c-nav__item"
              >
                <a
                  aria-current={null}
                  className="pf-c-nav__link"
                  href="#link3"
                  onClick={[Function]}
                >
                  Link 3
                </a>
              </li>
            </Component>
            <Component
              key="#link4"
              to="#link4"
            >
              <li
                className="pf-c-nav__item"
              >
                <a
                  aria-current={null}
                  className="pf-c-nav__link"
                  href="#link4"
                  onClick={[Function]}
                >
                  Link 4
                </a>
              </li>
            </Component>
          </ul>
          <button
            aria-label="Scroll right"
            className="pf-c-nav__scroll-button"
            onClick={[Function]}
          >
            <AngleRightIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
              title={null}
            >
              <svg
                aria-hidden={true}
                aria-labelledby={null}
                fill="currentColor"
                height="1em"
                role="img"
                style={
                  Object {
                    "verticalAlign": "-0.125em",
                  }
                }
                viewBox="0 0 256 512"
                width="1em"
              >
                <path
                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                  transform=""
                />
              </svg>
            </AngleRightIcon>
          </button>
        </NavList>
      </nav>
    </Nav>
  </ComponentWithOuia>
</Component>
`;

exports[`Nav Grouped List 1`] = `
<Component>
  <ComponentWithOuia
    component={[Function]}
    componentProps={
      Object {
        "children": Array [
          <Unknown
            id="grp-1"
            title="Section 1"
          >
            <NavList
              ariaLeftScroll="Scroll left"
              ariaRightScroll="Scroll right"
              className=""
              variant="default"
            >
              <Unknown
                to="#link1"
              >
                Link 1
              </Unknown>
              <Unknown
                to="#link2"
              >
                Link 2
              </Unknown>
              <Unknown
                to="#link3"
              >
                Link 3
              </Unknown>
              <Unknown
                to="#link4"
              >
                Link 4
              </Unknown>
            </NavList>
          </Unknown>,
          <Unknown
            id="grp-2"
            title="Section 2"
          >
            <NavList
              ariaLeftScroll="Scroll left"
              ariaRightScroll="Scroll right"
              className=""
              variant="default"
            >
              <Unknown
                to="#link1"
              >
                Link 1
              </Unknown>
              <Unknown
                to="#link2"
              >
                Link 2
              </Unknown>
              <Unknown
                to="#link3"
              >
                Link 3
              </Unknown>
              <Unknown
                to="#link4"
              >
                Link 4
              </Unknown>
            </NavList>
          </Unknown>,
        ],
      }
    }
    consumerContext={null}
  >
    <Nav
      aria-label=""
      className=""
      onSelect={[Function]}
      onToggle={[Function]}
      ouiaContext={
        Object {
          "isOuia": false,
          "ouiaId": null,
        }
      }
      theme="light"
    >
      <nav
        aria-label="Global"
        className="pf-c-nav"
      >
        <Component
          id="grp-1"
          title="Section 1"
        >
          <section
            aria-labelledby="grp-1"
            className="pf-c-nav__section"
          >
            <h2
              className="pf-c-nav__section-title"
              id="grp-1"
            >
              Section 1
            </h2>
            <ul
              className="pf-c-nav__simple-list"
            >
              <NavList
                ariaLeftScroll="Scroll left"
                ariaRightScroll="Scroll right"
                className=""
                variant="default"
              >
                <ul
                  className="pf-c-nav__list"
                >
                  <Component
                    key="section1_#link1"
                    to="#link1"
                  >
                    <li
                      className="pf-c-nav__item"
                    >
                      <a
                        aria-current={null}
                        className="pf-c-nav__link"
                        href="#link1"
                        onClick={[Function]}
                      >
                        Link 1
                      </a>
                    </li>
                  </Component>
                  <Component
                    key="section1_#link2"
                    to="#link2"
                  >
                    <li
                      className="pf-c-nav__item"
                    >
                      <a
                        aria-current={null}
                        className="pf-c-nav__link"
                        href="#link2"
                        onClick={[Function]}
                      >
                        Link 2
                      </a>
                    </li>
                  </Component>
                  <Component
                    key="section1_#link3"
                    to="#link3"
                  >
                    <li
                      className="pf-c-nav__item"
                    >
                      <a
                        aria-current={null}
                        className="pf-c-nav__link"
                        href="#link3"
                        onClick={[Function]}
                      >
                        Link 3
                      </a>
                    </li>
                  </Component>
                  <Component
                    key="section1_#link4"
                    to="#link4"
                  >
                    <li
                      className="pf-c-nav__item"
                    >
                      <a
                        aria-current={null}
                        className="pf-c-nav__link"
                        href="#link4"
                        onClick={[Function]}
                      >
                        Link 4
                      </a>
                    </li>
                  </Component>
                </ul>
              </NavList>
            </ul>
          </section>
        </Component>
        <Component
          id="grp-2"
          title="Section 2"
        >
          <section
            aria-labelledby="grp-2"
            className="pf-c-nav__section"
          >
            <h2
              className="pf-c-nav__section-title"
              id="grp-2"
            >
              Section 2
            </h2>
            <ul
              className="pf-c-nav__simple-list"
            >
              <NavList
                ariaLeftScroll="Scroll left"
                ariaRightScroll="Scroll right"
                className=""
                variant="default"
              >
                <ul
                  className="pf-c-nav__list"
                >
                  <Component
                    key="section2_#link1"
                    to="#link1"
                  >
                    <li
                      className="pf-c-nav__item"
                    >
                      <a
                        aria-current={null}
                        className="pf-c-nav__link"
                        href="#link1"
                        onClick={[Function]}
                      >
                        Link 1
                      </a>
                    </li>
                  </Component>
                  <Component
                    key="section2_#link2"
                    to="#link2"
                  >
                    <li
                      className="pf-c-nav__item"
                    >
                      <a
                        aria-current={null}
                        className="pf-c-nav__link"
                        href="#link2"
                        onClick={[Function]}
                      >
                        Link 2
                      </a>
                    </li>
                  </Component>
                  <Component
                    key="section2_#link3"
                    to="#link3"
                  >
                    <li
                      className="pf-c-nav__item"
                    >
                      <a
                        aria-current={null}
                        className="pf-c-nav__link"
                        href="#link3"
                        onClick={[Function]}
                      >
                        Link 3
                      </a>
                    </li>
                  </Component>
                  <Component
                    key="section2_#link4"
                    to="#link4"
                  >
                    <li
                      className="pf-c-nav__item"
                    >
                      <a
                        aria-current={null}
                        className="pf-c-nav__link"
                        href="#link4"
                        onClick={[Function]}
                      >
                        Link 4
                      </a>
                    </li>
                  </Component>
                </ul>
              </NavList>
            </ul>
          </section>
        </Component>
      </nav>
    </Nav>
  </ComponentWithOuia>
</Component>
`;

exports[`Nav List with custom item nodes 1`] = `
<Component>
  <ComponentWithOuia
    component={[Function]}
    componentProps={
      Object {
        "children": <NavList
          ariaLeftScroll="Scroll left"
          ariaRightScroll="Scroll right"
          className=""
          variant="tertiary"
        >
          <Unknown
            className="test-nav-item-class"
            to="/components/nav#link1"
          >
            <div
              className="my-custom-node"
            >
              My custom node
            </div>
          </Unknown>
        </NavList>,
      }
    }
    consumerContext={null}
  >
    <Nav
      aria-label=""
      className=""
      onSelect={[Function]}
      onToggle={[Function]}
      ouiaContext={
        Object {
          "isOuia": false,
          "ouiaId": null,
        }
      }
      theme="light"
    >
      <nav
        aria-label="Local"
        className="pf-c-nav"
      >
        <NavList
          ariaLeftScroll="Scroll left"
          ariaRightScroll="Scroll right"
          className=""
          variant="tertiary"
        >
          <button
            aria-label="Scroll left"
            className="pf-c-nav__scroll-button"
            onClick={[Function]}
          >
            <AngleLeftIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
              title={null}
            >
              <svg
                aria-hidden={true}
                aria-labelledby={null}
                fill="currentColor"
                height="1em"
                role="img"
                style={
                  Object {
                    "verticalAlign": "-0.125em",
                  }
                }
                viewBox="0 0 256 512"
                width="1em"
              >
                <path
                  d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
                  transform=""
                />
              </svg>
            </AngleLeftIcon>
          </button>
          <ul
            className="pf-c-nav__tertiary-list"
          >
            <Component
              className="test-nav-item-class"
              to="/components/nav#link1"
            >
              <li
                className="pf-c-nav__item test-nav-item-class"
              >
                <div
                  aria-current={null}
                  className="pf-c-nav__link my-custom-node"
                  onClick={[Function]}
                >
                  My custom node
                </div>
              </li>
            </Component>
          </ul>
          <button
            aria-label="Scroll right"
            className="pf-c-nav__scroll-button"
            onClick={[Function]}
          >
            <AngleRightIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
              title={null}
            >
              <svg
                aria-hidden={true}
                aria-labelledby={null}
                fill="currentColor"
                height="1em"
                role="img"
                style={
                  Object {
                    "verticalAlign": "-0.125em",
                  }
                }
                viewBox="0 0 256 512"
                width="1em"
              >
                <path
                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                  transform=""
                />
              </svg>
            </AngleRightIcon>
          </button>
        </NavList>
      </nav>
    </Nav>
  </ComponentWithOuia>
</Component>
`;

exports[`Simple Nav List 1`] = `
<Component>
  <ComponentWithOuia
    component={[Function]}
    componentProps={
      Object {
        "children": <NavList
          ariaLeftScroll="Scroll left"
          ariaRightScroll="Scroll right"
          className=""
          variant="simple"
        >
          <Unknown
            to="#link1"
          >
            Link 1
          </Unknown>
          <Unknown
            to="#link2"
          >
            Link 2
          </Unknown>
          <Unknown
            to="#link3"
          >
            Link 3
          </Unknown>
          <Unknown
            to="#link4"
          >
            Link 4
          </Unknown>
        </NavList>,
      }
    }
    consumerContext={null}
  >
    <Nav
      aria-label=""
      className=""
      onSelect={[Function]}
      onToggle={[Function]}
      ouiaContext={
        Object {
          "isOuia": false,
          "ouiaId": null,
        }
      }
      theme="light"
    >
      <nav
        aria-label="Global"
        className="pf-c-nav"
      >
        <NavList
          ariaLeftScroll="Scroll left"
          ariaRightScroll="Scroll right"
          className=""
          variant="simple"
        >
          <ul
            className="pf-c-nav__simple-list"
          >
            <Component
              key="#link1"
              to="#link1"
            >
              <li
                className="pf-c-nav__item"
              >
                <a
                  aria-current={null}
                  className="pf-c-nav__link"
                  href="#link1"
                  onClick={[Function]}
                >
                  Link 1
                </a>
              </li>
            </Component>
            <Component
              key="#link2"
              to="#link2"
            >
              <li
                className="pf-c-nav__item"
              >
                <a
                  aria-current={null}
                  className="pf-c-nav__link"
                  href="#link2"
                  onClick={[Function]}
                >
                  Link 2
                </a>
              </li>
            </Component>
            <Component
              key="#link3"
              to="#link3"
            >
              <li
                className="pf-c-nav__item"
              >
                <a
                  aria-current={null}
                  className="pf-c-nav__link"
                  href="#link3"
                  onClick={[Function]}
                >
                  Link 3
                </a>
              </li>
            </Component>
            <Component
              key="#link4"
              to="#link4"
            >
              <li
                className="pf-c-nav__item"
              >
                <a
                  aria-current={null}
                  className="pf-c-nav__link"
                  href="#link4"
                  onClick={[Function]}
                >
                  Link 4
                </a>
              </li>
            </Component>
          </ul>
        </NavList>
      </nav>
    </Nav>
  </ComponentWithOuia>
</Component>
`;

exports[`Tertiary Nav List 1`] = `
<Component>
  <ComponentWithOuia
    component={[Function]}
    componentProps={
      Object {
        "children": <NavList
          ariaLeftScroll="Scroll left"
          ariaRightScroll="Scroll right"
          className=""
          variant="tertiary"
        >
          <Unknown
            to="#link1"
          >
            Link 1
          </Unknown>
          <Unknown
            to="#link2"
          >
            Link 2
          </Unknown>
          <Unknown
            to="#link3"
          >
            Link 3
          </Unknown>
          <Unknown
            to="#link4"
          >
            Link 4
          </Unknown>
        </NavList>,
      }
    }
    consumerContext={null}
  >
    <Nav
      aria-label=""
      className=""
      onSelect={[Function]}
      onToggle={[Function]}
      ouiaContext={
        Object {
          "isOuia": false,
          "ouiaId": null,
        }
      }
      theme="light"
    >
      <nav
        aria-label="Local"
        className="pf-c-nav"
      >
        <NavList
          ariaLeftScroll="Scroll left"
          ariaRightScroll="Scroll right"
          className=""
          variant="tertiary"
        >
          <button
            aria-label="Scroll left"
            className="pf-c-nav__scroll-button"
            onClick={[Function]}
          >
            <AngleLeftIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
              title={null}
            >
              <svg
                aria-hidden={true}
                aria-labelledby={null}
                fill="currentColor"
                height="1em"
                role="img"
                style={
                  Object {
                    "verticalAlign": "-0.125em",
                  }
                }
                viewBox="0 0 256 512"
                width="1em"
              >
                <path
                  d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
                  transform=""
                />
              </svg>
            </AngleLeftIcon>
          </button>
          <ul
            className="pf-c-nav__tertiary-list"
          >
            <Component
              key="#link1"
              to="#link1"
            >
              <li
                className="pf-c-nav__item"
              >
                <a
                  aria-current={null}
                  className="pf-c-nav__link"
                  href="#link1"
                  onClick={[Function]}
                >
                  Link 1
                </a>
              </li>
            </Component>
            <Component
              key="#link2"
              to="#link2"
            >
              <li
                className="pf-c-nav__item"
              >
                <a
                  aria-current={null}
                  className="pf-c-nav__link"
                  href="#link2"
                  onClick={[Function]}
                >
                  Link 2
                </a>
              </li>
            </Component>
            <Component
              key="#link3"
              to="#link3"
            >
              <li
                className="pf-c-nav__item"
              >
                <a
                  aria-current={null}
                  className="pf-c-nav__link"
                  href="#link3"
                  onClick={[Function]}
                >
                  Link 3
                </a>
              </li>
            </Component>
            <Component
              key="#link4"
              to="#link4"
            >
              <li
                className="pf-c-nav__item"
              >
                <a
                  aria-current={null}
                  className="pf-c-nav__link"
                  href="#link4"
                  onClick={[Function]}
                >
                  Link 4
                </a>
              </li>
            </Component>
          </ul>
          <button
            aria-label="Scroll right"
            className="pf-c-nav__scroll-button"
            onClick={[Function]}
          >
            <AngleRightIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
              title={null}
            >
              <svg
                aria-hidden={true}
                aria-labelledby={null}
                fill="currentColor"
                height="1em"
                role="img"
                style={
                  Object {
                    "verticalAlign": "-0.125em",
                  }
                }
                viewBox="0 0 256 512"
                width="1em"
              >
                <path
                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                  transform=""
                />
              </svg>
            </AngleRightIcon>
          </button>
        </NavList>
      </nav>
    </Nav>
  </ComponentWithOuia>
</Component>
`;
